tdf#134413 must add scrollbar width on turning it off to occupy the same space

when scrollbars have width

Change-Id: I3f9f6951add23f8ac93a03cf3356add5a2b3ddd8